keyword css 사용하지 않는/불필요한 css 제거

--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -6,32 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-    <title>Insurance | Insurances type</title>
-
-    <!-- Loading third party fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|" rel="stylesheet" type="text/css">
-    <link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="fonts/lineo-icon/style.css" rel="stylesheet" type="text/css">
+    <title>Insurance | 보험 키워드 찾기</title>
 
     <!-- Loading main css file -->
-    <link rel="stylesheet" href="css/insurance.css">
+    <link rel="stylesheet" href="css/insuranceByKeyword.css">
 
 </head>
 
 <body>
-
     <div id="site-content">
         <header>
             <!-- extra class no-background -->
-            <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
             <h1 class="page-title">댕냥댕냥</h1>
         </header>
 
         <main class="main-content">
             <div class="page">
                 <div class="container">
+                    <a href="javascript:history.back();">
+                        <div class="prev-icon">
+                            <div class="prev-arrow"></div>
+                        </div>
+                    </a>
                     <h3 class="entry-title">펫보험 비교보기</h3>
-                    <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다. 가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
+                    <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생할 수 있습니다.</p>
+                    <p>가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
 
                     <div class="filter-links filterable-nav">
                         <strong>Select Category: </strong>
