--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -123,7 +123,7 @@ body {
 
 .card-image {
     grid-area: image;
-    background: url("img1.jpg");
+    /* background: url("img1.jpg"); */
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     background-size: cover;
@@ -214,7 +214,7 @@ body {
 }
 
 .card-image.card2 {
-    background: url("img2.jpg");
+    /* background: url("img2.jpg"); */
     background-size: cover;
 }
 
@@ -261,7 +261,7 @@ body {
 }
 
 .card-image.card3 {
-    background: url("img3.jpg");
+    /* background: url("img3.jpg"); */
     background-size: cover;
 }
 
