--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -49,7 +49,8 @@
                                 <div class="card-text">
                                     <span class="date">4 days ago</span>
                                     <h2>Post One</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis
+                                        illum maxime quod deserunt eligendi dolor</p>
                                 </div>
                                 <div class="card-stats">
                                     <div class="stat border">
@@ -63,123 +64,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="insurance-item filterable-item a">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/carrot.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">스마트온펫산책보험</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item b && c">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/db.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">프로미 반려동물보험</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(입원) 15만원</p>
-                                <p>치료비(통원) 15만원</p>
-                                <p>배상책임 500만원</p>
-                                <p>사망시위로금 15만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item a && b">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/nh.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">반려동물장제비보험</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item c && a">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/hanwha.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">펫플러스</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item a">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/meritz.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">페퍼민츠</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item a">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/kb.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">KB 펫코노미 보험</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item c">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/samsung.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">애니펫</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(입원) 10만원</p>
-                                <p>장례비지원비 15만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item c">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/lotte.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">롯데마이펫보험</h3>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(입원) 10만원</p>
-                                <p>배상책임 500만원</p>
-                                <p>장례비지원비 15만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
-
-                        <div class="insurance-item filterable-item b">
-                            <div class="insurance-content">
-                                <div class="insurance-icon"><img src="img/hyundai.png" alt="" width="220"></div>
-                                <h3 class="insurance-title">하이펫 애견보험</h3>
-                                <p>애견 배상책임 500만원</p>
-                                <p>애견장례비 15만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <p>치료비(수술) 150만원</p>
-                                <a href="#" class="button">자세히</a>
-                                <a href="#" class="button">가입</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -191,7 +75,35 @@
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/app.js"></script>
-
+    <script>
+        $.ajax({
+            url: "/insurance",
+            type: "POST",
+            success: function (data) {
+                const insurances = JSON.parse(data);
+                for (var i = 0; i < insurances.insurances.length; i++) {
+                    console
+                    $('.filterable-items').prepend(
+                        '<div class="insurance-item filterable-item ' +
+                        insurances.insurances[i].category +
+                        '"> <div class="card"> <div class="card-image"> <img src=' +
+                        insurances.insurances[i].img +
+                        '></div><div class="card-text"> <span class="date" style="color:' +
+                        insurances.insurances[i].color +
+                        '";>' +
+                        insurances.insurances[i].company +
+                        '</span><h2>' +
+                        insurances.insurances[i].insuranceName +
+                        '</h2><p>' +
+                        insurances.insurances[i].price +
+                        '</p></div> <div class="card-stats" style="background-color:' +
+                        insurances.insurances[i].color +
+                        '";> <div class="stat border"> <div class="value">자세히</div> <div class="type">views</div> </div> <div class="stat"> <div class="value">가입</div> <div class="type">buy</div></div></div></div></div>'
+                    );
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
