키워드로 찾기 웹 프론트 - 테스트용 카드 image 및 text

--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -34,8 +34,8 @@
                     <div class="filter-links filterable-nav">
                         <strong>Select Category: </strong>
                         <a href="#" class="current wow fadeInRight" data-filter="*">전체</a>
-                        <a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">가장 싼</a>
-                        <a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미 등록</a>
+                        <a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">의료비 지원</a>
+                        <a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미등록</a>
                         <a href="#" class="wow fadeInRight" data-wow-delay=".6s" data-filter=".c">장례비 지원</a>
                     </div>
 
@@ -43,12 +43,12 @@
                         <div class="insurance-item filterable-item a">
                             <div class="card">
                                 <div class="multi-image">
-                                    <img src="img/pet1.png" alt="" width="220">
+                                    <img src="img/pet3.png" alt="" width="220">
                                 </div>
-                                <div class="card-image"> <img src="img/lotte.png"></div>
+                                <div class="card-image"> <img src="img/dog-and-cat.png"></div>
                                 <div class="card-text">
-                                    <span class="date">4 days ago</span>
-                                    <h2>Post One</h2>
+                                    <span class="date">적용중</span>
+                                    <h2>Test</h2>
                                     <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis
                                         illum maxime quod deserunt eligendi dolor</p>
                                 </div>
