--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -32,7 +32,7 @@
                     <p>가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
 
                     <div class="filter-links filterable-nav">
-                        <strong>Select Category: </strong>
+                        <strong> 키워드 : </strong>
                         <a href="#" class="current wow fadeInRight" data-filter="*">전체</a>
                         <a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">의료비 지원</a>
                         <a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미등록</a>
